kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  generation: 1
  labels:
    app.kubernetes.io/instance: agents
    app.kubernetes.io/name: agents
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: agents
  namespace: agents
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - api.agents.kak.im
      secretName: api-agents-tls
    - hosts:
        - chat.agents.kak.im
      secretName: chat-agents-tls
  rules:
    - host: api.agents.kak.im
      http:
        paths:
        - backend:
            service:
              name: api
              port:
                number: 80
          path: /
          pathType: Prefix
    - host: chat.agents.kak.im
      http:
        paths:
        - backend:
            service:
              name: chat
              port:
                number: 80
          path: /
          pathType: Prefix
